// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLarge Rendering should match to snapshot - Primary: Primary button snapshot 1`] = `
<Button
  backgroundColor="#F3A802"
  onPress={[Function]}
  style={
    Array [
      Object {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  Continue
</Button>
`;

exports[`ButtonLarge Rendering should match to snapshot - Secondary: Secondary button snapshot 1`] = `
<Button
  onPress={[Function]}
  style={
    Array [
      Object {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <TextStrong
    style={Object {}}
  >
    Probando
  </TextStrong>
</Button>
`;
